--- a/fotografias.html
+++ b/fotografias.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>W3.CSS</title>
+    <title>COETZY</title>
     <link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
    
 
-    <title>Coetzy</title>
+ 
     <style>
         @font-face {
             font-family: brandon;
