--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Licence URI: https://www.os-templates.com/template-terms
 <html lang="">
 <!-- To declare your language - read more here: https://www.w3.org/International/questions/qa-html-language-declarations -->
 <head>
-    <title>Coetzy</title>
+    <title>COETZY</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
@@ -22,14 +22,17 @@ Licence URI: https://www.os-templates.com/template-terms
             font-style: normal;
             font-weight: 100;
         }
+
         #pageintro .heading {
             margin-bottom: 20px;
             font-size: 2rem;
         }
+
         #footer {
             padding: 0px 0;
             padding-top: 0px;
         }
+
             #footer #ctdetails {
                 padding-top: 30px;
                 border-top: 1px solid;
@@ -48,11 +51,12 @@ Licence URI: https://www.os-templates.com/template-terms
             border-width: 1px 0;
             background-color: rgba(0,0,0,.70);
         }
-       h1, h2, h3, h4, h5, h6, .heading {
-    font-family: Verdana, Geneva, sans-serif;
-}
+
+        h1, h2, h3, h4, h5, h6, .heading {
+            font-family: Verdana, Geneva, sans-serif;
+        }
+
         .row2 {
-          
             background-color: #474747;
         }
     </style>
