--- a/murales.html
+++ b/murales.html
@@ -10,6 +10,8 @@ Licence URI: https://www.os-templates.com/template-terms
 <html lang="">
 <!-- To declare your language - read more here: https://www.w3.org/International/questions/qa-html-language-declarations -->
 <head>
+
+    <title>COETZY</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
@@ -18,14 +20,13 @@ Licence URI: https://www.os-templates.com/template-terms
     <style>
 
         @font-face {
-    font-family: brandon;
-    src: url(Br.otf);
-    font-style: normal;
-    font-weight: 100;
-}
+            font-family: brandon;
+            src: url(Br.otf);
+            font-style: normal;
+            font-weight: 100;
+        }
 
         body {
-          
             margin: 0;
         }
 
@@ -54,6 +55,7 @@ Licence URI: https://www.os-templates.com/template-terms
             margin-right: auto;
             padding: 0px;
         }
+
         }
 
         /* Hide the images by default */
