--- a/pinturas.html
+++ b/pinturas.html
@@ -10,6 +10,7 @@ Licence URI: https://www.os-templates.com/template-terms
 <html lang="">
 <!-- To declare your language - read more here: https://www.w3.org/International/questions/qa-html-language-declarations -->
 <head>
+    <title>COETZY</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
@@ -37,6 +38,7 @@ Licence URI: https://www.os-templates.com/template-terms
             color: inherit;
             background-color: rgba(0,0,0,.0);
         }
+
         @font-face {
             font-family: brandon;
             src: url(Br.otf);
@@ -139,26 +141,8 @@ Licence URI: https://www.os-templates.com/template-terms
                     flex: 100%;
                     max-width: 100%;
                 }
-
-
-
-
-
-
-               
             }
-
-
-
-
-
-
-
-
-
-
-
-                }
+        }
     </style>
 </head>
 <body>
