--- a/murales.html
+++ b/murales.html
@@ -202,42 +202,48 @@ Licence URI: https://www.os-templates.com/template-terms
 
     <div class="container">
         <div class="mySlides">
-            <div class="numbertext">1 / 8</div>
+            <div class="numbertext">1 / 9</div>
             <img src="murales/8.jpg" style="width:100%">
         </div>
 
         <div class="mySlides">
-            <div class="numbertext">2 / 8</div>
+            <div class="numbertext">2 / 9</div>
             <img src="murales/1.jpg" style="width:100%">
         </div>
 
         <div class="mySlides">
-            <div class="numbertext">3 / 8</div>
+            <div class="numbertext">3 / 9</div>
             <img src="murales/2.jpg" style="width:100%">
         </div>
 
         <div class="mySlides">
-            <div class="numbertext">4 / 8</div>
+            <div class="numbertext">4 / 9</div>
             <img src="murales/3.jpg" style="width:100%">
         </div>
 
         <div class="mySlides">
-            <div class="numbertext">5 / 8</div>
+            <div class="numbertext">5 / 9</div>
+            <img src="murales/9.jpg" style="width:100%">
+        </div>
+
+
+        <div class="mySlides">
+            <div class="numbertext">6 / 9</div>
             <img src="murales/4.jpg" style="width:100%">
         </div>
 
         <div class="mySlides">
-            <div class="numbertext">6 / 8</div>
+            <div class="numbertext">7 / 9</div>
             <img src="murales/5.jpg" style="width:100%">
         </div>
 
         <div class="mySlides">
-            <div class="numbertext">7/ 8</div>
+            <div class="numbertext">8/ 9</div>
             <img src="murales/6.jpg" style="width:100%">
         </div>
 
         <div class="mySlides">
-            <div class="numbertext">8/ 8</div>
+            <div class="numbertext">9/ 9</div>
             <img src="murales/7.jpg" style="width:100%">
         </div>
 
@@ -262,17 +268,21 @@ Licence URI: https://www.os-templates.com/template-terms
             <div class="column">
                 <img class="demo cursor" src="murales/3.jpg" style="width:100%" onclick="currentSlide(4)" alt="Marco Bruto y 26 de Marzo, Montevideo.">
             </div>
+
             <div class="column">
-                <img class="demo cursor" src="murales/4.jpg" style="width:100%" onclick="currentSlide(5)" alt="Nicaragua y General Rondeau, Montevideo.">
+                <img class="demo cursor" src="murales/9.jpg" style="width:100%" onclick="currentSlide(5)" alt="Torres García, Las Piedras">
             </div>
             <div class="column">
-                <img class="demo cursor" src="murales/5.jpg" style="width:100%" onclick="currentSlide(6)" alt="Ellauri y Bulevar España, Montevideo.">
+                <img class="demo cursor" src="murales/4.jpg" style="width:100%" onclick="currentSlide(6)" alt="Nicaragua y General Rondeau, Montevideo.">
             </div>
             <div class="column">
-                <img class="demo cursor" src="murales/6.jpg" style="width:100%" onclick="currentSlide(7)" alt="Veterinaria Barrios Jr, Maldonado.">
+                <img class="demo cursor" src="murales/5.jpg" style="width:100%" onclick="currentSlide(7)" alt="Ellauri y Bulevar España, Montevideo.">
             </div>
             <div class="column">
-                <img class="demo cursor" src="murales/7.jpg" style="width:100%" onclick="currentSlide(8)" alt="En Estadía Pocitos, Montevideo">
+                <img class="demo cursor" src="murales/6.jpg" style="width:100%" onclick="currentSlide(8)" alt="Veterinaria Barrios Jr, Maldonado.">
+            </div>
+            <div class="column">
+                <img class="demo cursor" src="murales/7.jpg" style="width:100%" onclick="currentSlide(9)" alt="En Estadía Pocitos, Montevideo">
             </div>
         </div>
     </div>
