--- a/murales.html
+++ b/murales.html
@@ -322,7 +322,12 @@ Licence URI: https://www.os-templates.com/template-terms
                         <li class="one_quarter">
                             <div class="block clear"> <a href="#"> <i class="fas fa-envelope"> </i> </a> <span> <strong> Mail:</strong> coetzy@hotmail.com</span> </div>
                         </li>
-
+                        <li class="one_quarter">
+                            <div class="block clear"> <a href="https://www.linkedin.com/in/constanza-morero-090182222"> <i class="fab fa-linkedin"> </i> </a> <span> <a href="https://www.linkedin.com/in/constanza-morero-090182222"> <strong> Linkedin</strong> </span> </div>
+                        </li>
+                        <li class="one_quarter">
+                            <div class="block clear"> <a href="https://www.instagram.com/coetzy_"> <i class="fab fa-instagram"> </i> </a> <span> <a href="https://www.instagram.com/coetzy_"> <strong> Coetzy_</strong> </span> </div>
+                        </li>
                     </ul>
                 </div>
                 <!-- ################################################################################################ -->
