--- a/murales.html
+++ b/murales.html
@@ -262,7 +262,7 @@ Licence URI: https://www.os-templates.com/template-terms
 
         <div class="row">
             <div class="column">
-                <img class="demo cursor" src="murales/8.jpg" style="width:100%" onclick="currentSlide(1)" alt="Canelones y Torres García, Las Piedras">
+                <img class="demo cursor" src="murales/8.jpg" style="width:100%" onclick="currentSlide(1)" alt="Canelones y Torres García, Las Piedras, junto con Erre">
             </div>
             <div class="column">
                 <img class="demo cursor" src="murales/10.jpg" style="width:100%" onclick="currentSlide(2)" alt="Minas y Miguelete, Montevideo">
