--- a/murales.html
+++ b/murales.html
@@ -202,51 +202,64 @@ Licence URI: https://www.os-templates.com/template-terms
 
     <div class="container">
         <div class="mySlides">
-            <div class="numbertext">1 / 9</div>
+            <div class="numbertext">1 / 12</div>
             <img src="murales/8.jpg" style="width:100%">
         </div>
 
         <div class="mySlides">
-            <div class="numbertext">2 / 9</div>
+            <div class="numbertext">2 / 12</div>
             <img src="murales/1.jpg" style="width:100%">
         </div>
 
         <div class="mySlides">
-            <div class="numbertext">3 / 9</div>
-            <img src="murales/2.jpg" style="width:100%">
+            <div class="numbertext">3 / 12</div>
+            <img src="murales/10.jpg" style="width:100%">
         </div>
 
         <div class="mySlides">
-            <div class="numbertext">4 / 9</div>
+            <div class="numbertext">4 / 12</div>
+            <img src="murales/11.jpg" style="width:100%">
+        </div>
+
+        <div class="mySlides">
+            <div class="numbertext">5 / 12</div>
+            <img src="murales/2.jpg" style="width:100%">
+        </div>
+
+
+        <div class="mySlides">
+            <div class="numbertext">6 / 12</div>
             <img src="murales/3.jpg" style="width:100%">
         </div>
 
         <div class="mySlides">
-            <div class="numbertext">5 / 9</div>
+            <div class="numbertext">7 / 12</div>
             <img src="murales/9.jpg" style="width:100%">
         </div>
 
-
         <div class="mySlides">
-            <div class="numbertext">6 / 9</div>
+            <div class="numbertext">8/ 12</div>
             <img src="murales/4.jpg" style="width:100%">
         </div>
 
         <div class="mySlides">
-            <div class="numbertext">7 / 9</div>
+            <div class="numbertext">9/ 12</div>
             <img src="murales/5.jpg" style="width:100%">
         </div>
 
         <div class="mySlides">
-            <div class="numbertext">8/ 9</div>
+            <div class="numbertext">10/ 12</div>
             <img src="murales/6.jpg" style="width:100%">
         </div>
 
         <div class="mySlides">
-            <div class="numbertext">9/ 9</div>
+            <div class="numbertext">11/ 12</div>
             <img src="murales/7.jpg" style="width:100%">
         </div>
-
+        <div class="mySlides">
+            <div class="numbertext">12/ 12</div>
+            <img src="murales/12.jpg" style="width:100%">
+        </div>
 
         <a class="prev" onclick="plusSlides(-1)">❮</a>
         <a class="next" onclick="plusSlides(1)">❯</a>
@@ -263,29 +276,40 @@ Licence URI: https://www.os-templates.com/template-terms
                 <img class="demo cursor" src="murales/1.jpg" style="width:100%" onclick="currentSlide(2)" alt="Rambla, parada 21 de la mansa, Maldonado.">
             </div>
             <div class="column">
-                <img class="demo cursor" src="murales/2.jpg" style="width:100%" onclick="currentSlide(3)" alt="Venecia y Roque Saenz Peña, Ciudad de la Costa.">
+                <img class="demo cursor" src="murales/10.jpg" style="width:100%" onclick="currentSlide(3)" alt="Minas y Miguelete, Montevideo.">
             </div>
             <div class="column">
-                <img class="demo cursor" src="murales/3.jpg" style="width:100%" onclick="currentSlide(4)" alt="Marco Bruto y 26 de Marzo, Montevideo.">
-            </div>
-
-            <div class="column">
-                <img class="demo cursor" src="murales/9.jpg" style="width:100%" onclick="currentSlide(5)" alt="Torres García, Las Piedras">
+                <img class="demo cursor" src="murales/11.jpg" style="        width: 100%" onclick="currentSlide(4)" alt="Veterinaria Libia sucursal de Malvin, Montevideo.">
             </div>
             <div class="column">
-                <img class="demo cursor" src="murales/4.jpg" style="width:100%" onclick="currentSlide(6)" alt="Nicaragua y General Rondeau, Montevideo.">
+                <img class="demo cursor" src="murales/2.jpg" style="        width: 100%" onclick="currentSlide(5)" alt="Venecia y Roque Saenz Peña, Ciudad de la Costa.">
             </div>
             <div class="column">
-                <img class="demo cursor" src="murales/5.jpg" style="width:100%" onclick="currentSlide(7)" alt="Ellauri y Bulevar España, Montevideo.">
+                <img class="demo cursor" src="murales/3.jpg" style="        width: 100%" onclick="currentSlide(6)" alt="Marco Bruto y 26 de Marzo, Montevideo.">
             </div>
             <div class="column">
-                <img class="demo cursor" src="murales/6.jpg" style="width:100%" onclick="currentSlide(8)" alt="Veterinaria Barrios Jr, Maldonado.">
-            </div>
-            <div class="column">
-                <img class="demo cursor" src="murales/7.jpg" style="width:100%" onclick="currentSlide(9)" alt="En Estadía Pocitos, Montevideo">
+                <img class="demo cursor" src="murales/9.jpg" style="width:100%" onclick="currentSlide(7)" alt="Torres García, Las Piedras.">
             </div>
         </div>
-    </div>
+        <div class="row">
+            <div class="column">
+                <img class="demo cursor" src="murales/4.jpg" style="width:100%" onclick="currentSlide(8)" alt="Nicaragua y General Rondeau, Montevideo.">
+            </div>
+            <div class="column">
+                <img class="demo cursor" src="murales/5.jpg" style="width:100%" onclick="currentSlide(9)" alt="Ellauri y Bulevar España, Montevideo.">
+            </div>
+            <div class="column">
+                <img class="demo cursor" src="murales/6.jpg" style="width:100%" onclick="currentSlide(10)" alt="Veterinaria Barrios Jr, Maldonado.">
+            </div>
+            <div class="column">
+                <img class="demo cursor" src="murales/7.jpg" style="width:100%" onclick="currentSlide(11)" alt="En Estadía Pocitos, Montevideo.">
+            </div>
+            <div class="column">
+                <img class="demo cursor" src="murales/12.jpg" style="width:100%" onclick="currentSlide(12)" alt="25 de Mayo y Colón, Montevideo.">
+            </div>
+        </div>
+            
+        </div>
 
 
     </div>
